src/test/run-pass/issue-52141/auxiliary/some_crate.rs
#![crate_type = "lib"]

pub fn hello() {
    println!("Hello, world!");
}
